fix: Corrige erro no loadUserByUsername