@@ -34,7 +34,7 @@ public class UserService implements UserDetailsService {
         // instanciando o User (UserDetails)
         User user = new User();
         user.setEmail(username);
-        user.setPassword(result.getFirst().getPassword());
+        user.setPassword(result.get(0).getPassword());
         // percorrendo a result para pegar os roles
         for (UserDetailsProjection projection : result) {
             user.addRole(new Role(projection.getRoleId(), projection.getAuthority()));
